@@ -7,6 +7,7 @@ Version 1.1.1
 This version has not been released yet.
 
 * ETags for views include current sequence if include_docs=true.
+* JSONP responses now send "text/javascript" for Content-Type.
 
 Version 1.1.0
 -------------
